[package]
name = "solana_hft_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "native-tls"] }
# Use system native-tls to avoid rustls/zeroize version conflict
tungstenite = { version = "0.21", default-features = false, features = ["native-tls"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.7"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
structopt = "0.3"
toml = "0.8"
ndarray = "0.15"
linfa = "0.7"
linfa-logistic = "0.7"
bincode = "1.3"
barter = "0.3"
solana-client = "2.2.2"
solana-sdk = "2.2.2"
anchor-client = "0.31.1"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
bs58 = "0.5"
futures-util = "0.3"
# Streaming and gRPC client for Solana Geyser (Yellowstone)
yellowstone-grpc-client = { version = "6.1", features = ["tls"] }
byteorder = "1.5"
openbook_dex = { version = "0.5.6", default-features = false, optional = true }
yellowstone-grpc-proto = "6.1"
# Utilities for async streams
tokio-stream = "0.1"
# Useful for working with byte buffers in streams
tokio-util = "0.7"
# Protocol buffer codegen runtime (yellowstone depends on it)
prost = "0.12"
base64 = "0.22"
# gRPC transport implementation (required by yellowstone)
tonic = { version = "0.11", default-features = false, features = ["transport", "tls"] }
# For decoding OpenBook event queue (future work)
# openbook-dex = { git = "https://github.com/openbook-dex/program.git", package = "openbook_dex", default-features = false }
# Jupiter aggregator unofficial crate
jup-ag = { git = "https://github.com/mvines/rust-jup-ag", branch = "master" }

[features]
# removed custom patch; use crates.io release of solana_rbpf
default = []
